--- a/HtmlTemplate/index.html
+++ b/HtmlTemplate/index.html
@@ -1,4 +1,10 @@
-﻿<!DOCTYPE html>
+﻿<!-- _______. _______  __  ___ .___  ___.  _______ .__   __.     _______   ___________    ____
+    /       ||   ____||  |/  / |   \/   | |   ____||  \ |  |    |       \ |   ____\   \  /   /
+   |   (----`|  |__   |  '  /  |  \  /  | |  |__   |   \|  |    |  .--.  ||  |__   \   \/   /
+    \   \    |   __|  |    <   |  |\/|  | |   __|  |  . `  |    |  |  |  ||   __|   \      /
+.----)   |   |  |____ |  .  \  |  |  |  | |  |____ |  |\   |  __|  '--'  ||  |____   \    /
+|_______/    |_______||__|\__\ |__|  |__| |_______||__| \__| (__)_______/ |_______|   \__/-->
+<!DOCTYPE html>
 <html lang="tr">
 <head>
     <meta charset="utf-8">
@@ -533,54 +539,6 @@
                                                 <a href="#" class="detailBtn">DETAYLAR</a>
                                             </div>
                                         </li>
-                                        <li>
-                                            <img src="assets/images/miniImgs/miniImgs1.png" />
-                                            <div class="offerContent">
-                                                <span class="title">İSTANBUL - İTALYA</span>
-                                                <span class="price">299 TL</span>
-                                                <a href="#" class="detailBtn">DETAYLAR</a>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <img src="assets/images/miniImgs/miniImgs5.jpg" />
-                                            <div class="offerContent">
-                                                <span class="title">İSTANBUL - İTALYA</span>
-                                                <span class="price">299 TL</span>
-                                                <a href="#" class="detailBtn">DETAYLAR</a>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <img src="assets/images/miniImgs/miniImgs4.jpg" />
-                                            <div class="offerContent">
-                                                <span class="title">İSTANBUL - İTALYA</span>
-                                                <span class="price">299 TL</span>
-                                                <a href="#" class="detailBtn">DETAYLAR</a>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <img src="assets/images/miniImgs/miniImgs3.jpg" />
-                                            <div class="offerContent">
-                                                <span class="title">İSTANBUL - İTALYA</span>
-                                                <span class="price">299 TL</span>
-                                                <a href="#" class="detailBtn">DETAYLAR</a>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <img src="assets/images/miniImgs/miniImgs2.jpg" />
-                                            <div class="offerContent">
-                                                <span class="title">İSTANBUL - İTALYA</span>
-                                                <span class="price">299 TL</span>
-                                                <a href="#" class="detailBtn">DETAYLAR</a>
-                                            </div>
-                                        </li>
-                                        <li>
-                                            <img src="assets/images/miniImgs/miniImgs1.jpg" />
-                                            <div class="offerContent">
-                                                <span class="title">İSTANBUL - İTALYA</span>
-                                                <span class="price">299 TL</span>
-                                                <a href="#" class="detailBtn">DETAYLAR</a>
-                                            </div>
-                                        </li>
                                     </ul>
                                     <div class="rightSide">
                                         <span class="title">NERELERE UÇMAK LAZIM ?</span>
@@ -680,7 +638,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <img class="pull-left" src="/assets/images/logo.png" alt="" />
-                            <span class="copyright">COPYRIGT - 2017 | TÜM HAKLARI SAKLIDIR.</span>
+                            <span class="copyright">COPYRIGT - 2020 | TÜM HAKLARI SAKLIDIR.</span>
                         </div>
                         <div class="col-md-6">
                             <div class="pull-right mar-l-30">
@@ -714,135 +672,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
     <script src="/assets/plugins/auto-complete.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js" integrity="sha512-uto9mlQzrs59VwILcLiRYeLKPPbS/bT71da/OEBYEwcdNUk8jYIy+D176RYoop1Da+f9mvkYrmj5MCLZWEtQuA==" crossorigin="anonymous"></script>
-    <script>
-        $(document).ready(function () {
-            $('.countInputArea .minus').on('click', function () {
-                var inputVal = $(this).parent('.countInputArea').find('.countInput').val();
-                if (inputVal > 0)
-                    var inputValMinus = $(this).parent('.countInputArea').find('.countInput').val(+inputVal - 1);
-            });
-            $('.countInputArea .plus').on('click', function () {
-                var inputVal = $(this).parent('.countInputArea').find('.countInput').val();
-                var inputValMinus = $(this).parent('.countInputArea').find('.countInput').val(+inputVal + 1);
-
-            });
-
-            $('.passengerSelect').on('click', function () {
-                $('.passengerArea').show();
-            });
-
-            $(".fly-date").datepicker({
-                numberOfMonths: 2,
-            });
-            $('.searchInput .input').focus(function () {
-                $('.searchInput').removeClass('focus');
-                $(this).parents('.searchInput').addClass('focus');
-            });
-            $('.searchInput').on('click', function () {
-                $(this).find('.input').focus();
-            });
-            $('footer .footerMenu > div p.title').on('click', function () {
-                $(this).next('ul').slideToggle();
-                $(this).toggleClass('active');
-            });
-            $('.showMobileMenu').on('click', function () {
-                $('body').addClass('activeMenu');
-            });
-            $('.closeMobileMenu').on('click', function () {
-                $('body').removeClass('activeMenu');
-            });
-            $('.flyType li').click(function () {
-                $('.flyType li').removeClass('active');
-                $(this).addClass('active');
-                var hasClass = $(this).hasClass('one');
-                if (hasClass) {
-                    $('.dateTwo').hide();
-                    $('.dateTwo + .w-100').hide();
-                    $('.last-col').hide();
-                }
-                if (!hasClass) {
-                    $('.dateTwo').show();
-                    $('.dateTwo + .w-100').show();
-                    $('.last-col').show();
-                }
-            });
-
-            (function (factory) {
-                if (typeof define === "function" && define.amd) {
-
-                    // AMD. Register as an anonymous module.
-                    define(["../widgets/datepicker"], factory);
-                } else {
-
-                    // Browser globals
-                    factory(jQuery.datepicker);
-                }
-            }(function (datepicker) {
-
-                datepicker.regional.tr = {
-                    closeText: "kapat",
-                    prevText: '<i class="fa fa-long-arrow-left" aria-hidden="true"></i>',
-                    nextText: '<i class="fa fa-long-arrow-right" aria-hidden="true"></i>',
-                    currentText: "bugün",
-                    monthNames: ["Ocak", "Şubat", "Mart", "Nisan", "Mayıs", "Haziran",
-                        "Temmuz", "Ağustos", "Eylül", "Ekim", "Kasım", "Aralık"],
-                    monthNamesShort: ["Oca", "Şub", "Mar", "Nis", "May", "Haz",
-                        "Tem", "Ağu", "Eyl", "Eki", "Kas", "Ara"],
-                    dayNames: ["Pazar", "Pazartesi", "Salı", "Çarşamba", "Perşembe", "Cuma", "Cumartesi"],
-                    dayNamesShort: ["Paz", "Pzt", "Sal", "Çar", "Per", "Cum", "Cmt"],
-                    dayNamesMin: ["Paz", "Pzt", "Sal", "Çar", "Per", "Cum", "Cmt"],
-                    weekHeader: "Hf",
-                    dateFormat: "dd.mm.yy",
-                    firstDay: 1,
-                    isRTL: false,
-                    showMonthAfterYear: false,
-                    yearSuffix: ""
-                };
-                datepicker.setDefaults(datepicker.regional.tr);
-
-                return datepicker.regional.tr;
-
-            }));
-            autoComplateInput('first-place');
-            autoComplateInput('second-place');
-
-        });
-        mouseOutClose('.passengerArea');
-        function mouseOutClose(containerName) {
-            $(document).mouseup(function (e) {
-                var container = $(containerName);
-                if (!container.is(e.target) && container.has(e.target).length === 0) {
-                    container.hide();
-                }
-            });
-        }
-        function autoComplateInput(id) {
-            new window.autoComplete({
-                selector: '#' + id,
-                minChars: 2,
-                source: function (term, suggest) {
-                    term = term.toLowerCase();
-                    //////////////////////////////////////////////////////////////////////////////////////////////
-                    //{"AirportCode":"SAW","Name":"Sabiha Gokcen","CityName":"Istanbul, Türkiye","isCity":false}//
-                    //////////////////////////////////////////////////////////////////////////////////////////////
-                    var choices = window.airportList;
-                    var suggestions = [];
-                    for (i = 0; i < choices.length; i++)
-                        if (~(choices[i].AirportCode + ' ' + choices[i].Name + ' ' + choices[i].CityName).toLowerCase().indexOf(term)) suggestions.push(choices[i]);
-                    suggest(suggestions);
-                },
-                renderItem: function (item, search) {
-                    search = search.replace(/[-\/\\^$*+?.()|[\]{}]/g, '\\$&amp;');
-                    var re = new RegExp("(" + search.split(' ').join('|') + ")", "gi");
-                    return `<div class="autocomplete-suggestion" data-code="${item.AirportCode},${item.isCity}" data-langname="${item.Name}" data-lang="${item.CityName}" data-val="${search}"><span class="shortName">${item.AirportCode}</span> ${item.Name},${item.CityName}</div>`;
-                },
-                onSelect: function (e, term, item) {
-                    //console.log(`Item "${item.getAttribute('data-langname')} (${item.getAttribute('data-lang')})" selected by ${e.type == 'keydown' ? 'pressing enter' : 'mouse click'}.`);
-                    document.getElementById(id + "-hidden").value = item.getAttribute('data-code');
-                    document.getElementById(id).value = item.getAttribute('data-langname') + ' (' + item.getAttribute('data-lang') + ')';
-                }
-            });
-        }
-    </script>
+    <script src="assets/js/default.js"></script>
 </body>
 </html>
