--- a/HtmlTemplate/Buying.html
+++ b/HtmlTemplate/Buying.html
@@ -183,7 +183,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <img class="pull-left" src="/assets/images/logo.png" alt="" />
-                            <span class="copyright">COPYRIGT - 2017 | TÜM HAKLARI SAKLIDIR.</span>
+                            <span class="copyright">COPYRIGHT - 2017</span>
                         </div>
                         <div class="col-md-6">
                             <div class="pull-right mar-l-30">
