--- a/HtmlTemplate/index.html
+++ b/HtmlTemplate/index.html
@@ -24,7 +24,6 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker-standalone.min.css" rel="stylesheet" />
     <link href="/assets/plugins/auto-complete.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" integrity="sha512-aOG0c6nPNzGk+5zjwyJaoRUgCdOrfSDhmMID2u4+OIslr0GjpLKo7Xm0Ao3xmpM4T8AmIouRkqwj1nrdVsLKEQ==" crossorigin="anonymous" />
-    <link href="/assets/css/default.css" rel="stylesheet" />
     <link href="/assets/css/layout.css" rel="stylesheet" />
 </head>
 <body>
@@ -210,7 +209,7 @@
                         <div class="col last-col"></div>
                     </div>
                     <div class="searchBtnCon">
-                        <button class="btn btn-block searchBtn">EN UCUZ UÇAK BİLETLERİNİ BUL</button>
+                        <a href="/SearchResult.html" class="btn btn-block searchBtn">EN UCUZ UÇAK BİLETLERİNİ BUL</a>
                     </div>
                     <div class="ticketBgbottom"></div>
                 </div>
@@ -638,7 +637,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <img class="pull-left" src="/assets/images/logo.png" alt="" />
-                            <span class="copyright">COPYRIGT - 2020 | TÜM HAKLARI SAKLIDIR.</span>
+                            <span class="copyright">COPYRIGHT - 2020</span>
                         </div>
                         <div class="col-md-6">
                             <div class="pull-right mar-l-30">
