--- a/HtmlTemplate/Buying.html
+++ b/HtmlTemplate/Buying.html
@@ -17,14 +17,13 @@
     <meta name="author" content="humans.txt" />
     <title>Bilet Reyon</title>
     <link rel="shortcut icon" href="favicon.ico" />
-    <link href="/assets/plugins/bootstrap.min.css" rel="stylesheet" />
-    <link href="/assets/plugins/font-awesome.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css" integrity="sha512-oc9+XSs1H243/FRN9Rw62Fn8EtxjEYWHXRvjS43YtueEewbS6ObfXcJNyohjHqVKFPoXXUxwc+q1K7Dee6vv9g==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker-standalone.min.css" rel="stylesheet" />
-    <link href="/assets/css/auto-complete.css" rel="stylesheet" />
-    <link href="/assets/css/jquery-ui.min.css" rel="stylesheet" />
-    <link href="/assets/css/default.css" rel="stylesheet" />
+    <link href="/assets/plugins/auto-complete.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" integrity="sha512-aOG0c6nPNzGk+5zjwyJaoRUgCdOrfSDhmMID2u4+OIslr0GjpLKo7Xm0Ao3xmpM4T8AmIouRkqwj1nrdVsLKEQ==" crossorigin="anonymous" />
     <link href="/assets/css/layout.css" rel="stylesheet" />
 </head>
 <body>
@@ -84,7 +83,7 @@
         <div class="mobileMenuContainer">
             <div class="mobileMenu">
                 <div class="mobileMenuTitle">
-                    <img src="~/assets/images/menuIcon.png" class="closeMobileMenu" /> <span>Kullanıcı Menüsü</span>
+                    <img src="/assets/images/menuIcon.png" class="closeMobileMenu" /> <span>Kullanıcı Menüsü</span>
                 </div>
                 <ul class="vertical">
                     <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Anasayfa</a></li>
@@ -99,7 +98,7 @@
             </div>
         </div>
 
-        <!-- BODY -->
+
 
         <section class="subscribe">
             <div class="container clearfix">
@@ -183,7 +182,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <img class="pull-left" src="/assets/images/logo.png" alt="" />
-                            <span class="copyright">COPYRIGHT - 2017</span>
+                            <span class="copyright">COPYRIGHT - 2020</span>
                         </div>
                         <div class="col-md-6">
                             <div class="pull-right mar-l-30">
@@ -208,145 +207,15 @@
             </div>
         </footer>
     </div>
-    <script src="/assets/js/jquery-3.0.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.23.0/moment.min.js"></script>
-    <script src="/assets/js/vue.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js"></script>
-    <script src="/assets/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.12/vue.min.js" integrity="sha512-BKbSR+cfyxLdMAsE0naLReFSLg8/pjbgfxHh/k/kUC82Hy7r6HtR5hLhobaln2gcTvzkyyehrdREdjpsQwy2Jw==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.min.js" integrity="sha512-8qmis31OQi6hIRgvkht0s6mCOittjMa9GMqtK9hes5iEQBQE/Ca6yGE5FsW36vyipGoWQswBj/QBm2JR086Rkw==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.15/jquery.bxslider.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
-    <script src="/assets/js/auto-complete.min.js"></script>
-    <script src="/assets/js/jquery-ui.min.js"></script>
-    <script>
-        $('.flyType li').click(function () {
-            $('.flyType li').removeClass('active');
-            $(this).addClass('active');
-            var hasClass = $(this).hasClass('one');
-            if (hasClass) {
-                $('.dateTwo').hide();
-                $('.dateTwo + .w-100').hide();
-                $('.last-col').hide();
-            }
-            if (!hasClass) {
-                $('.dateTwo').show();
-                $('.dateTwo + .w-100').show();
-                $('.last-col').show();
-            }
-        });
-        $(document).ready(function () {
-            $('.countInputArea .minus').on('click', function () {
-                var inputVal = $(this).parent('.countInputArea').find('.countInput').val();
-                if (inputVal > 0)
-                    var inputValMinus = $(this).parent('.countInputArea').find('.countInput').val(+inputVal - 1);
-            });
-            $('.countInputArea .plus').on('click', function () {
-                var inputVal = $(this).parent('.countInputArea').find('.countInput').val();
-                var inputValMinus = $(this).parent('.countInputArea').find('.countInput').val(+inputVal + 1);
-
-            });
-
-            $('.passengerSelect').on('click', function () {
-                $('.passengerArea').show();
-            });
-
-            $(".fly-date").datepicker({
-                numberOfMonths: 2,
-            });
-
-            (function (factory) {
-                if (typeof define === "function" && define.amd) {
-
-                    // AMD. Register as an anonymous module.
-                    define(["../widgets/datepicker"], factory);
-                } else {
-
-                    // Browser globals
-                    factory(jQuery.datepicker);
-                }
-            }(function (datepicker) {
-
-                datepicker.regional.tr = {
-                    closeText: "kapat",
-                    prevText: '<i class="fa fa-long-arrow-left" aria-hidden="true"></i>',
-                    nextText: '<i class="fa fa-long-arrow-right" aria-hidden="true"></i>',
-                    currentText: "bugün",
-                    monthNames: ["Ocak", "Şubat", "Mart", "Nisan", "Mayıs", "Haziran",
-                        "Temmuz", "Ağustos", "Eylül", "Ekim", "Kasım", "Aralık"],
-                    monthNamesShort: ["Oca", "Şub", "Mar", "Nis", "May", "Haz",
-                        "Tem", "Ağu", "Eyl", "Eki", "Kas", "Ara"],
-                    dayNames: ["Pazar", "Pazartesi", "Salı", "Çarşamba", "Perşembe", "Cuma", "Cumartesi"],
-                    dayNamesShort: ["Paz", "Pzt", "Sal", "Çar", "Per", "Cum", "Cmt"],
-                    dayNamesMin: ["Paz", "Pzt", "Sal", "Çar", "Per", "Cum", "Cmt"],
-                    weekHeader: "Hf",
-                    dateFormat: "dd.mm.yy",
-                    firstDay: 1,
-                    isRTL: false,
-                    showMonthAfterYear: false,
-                    yearSuffix: ""
-                };
-                datepicker.setDefaults(datepicker.regional.tr);
-
-                return datepicker.regional.tr;
-
-            }));
-            autoComplateInput('first-place');
-            autoComplateInput('second-place');
-
-            function autoComplateInput(id) {
-                new window.autoComplete({
-                    selector: '#' + id,
-                    minChars: 2,
-                    source: function (term, suggest) {
-                        term = term.toLowerCase();
-                        //////////////////////////////////////////////////////////////////////////////////////////////
-                        //{"AirportCode":"SAW","Name":"Sabiha Gokcen","CityName":"Istanbul, Türkiye","isCity":false}//
-                        //////////////////////////////////////////////////////////////////////////////////////////////
-                        var choices = window.airportList;
-                        var suggestions = [];
-                        for (i = 0; i < choices.length; i++)
-                            if (~(choices[i].AirportCode + ' ' + choices[i].Name + ' ' + choices[i].CityName).toLowerCase().indexOf(term)) suggestions.push(choices[i]);
-                        suggest(suggestions);
-                    },
-                    renderItem: function (item, search) {
-                        search = search.replace(/[-\/\\^$*+?.()|[\]{}]/g, '\\$&amp;');
-                        var re = new RegExp("(" + search.split(' ').join('|') + ")", "gi");
-                        return `<div class="autocomplete-suggestion" data-code="${item.AirportCode},${item.isCity}" data-langname="${item.Name}" data-lang="${item.CityName}" data-val="${search}"><span class="shortName">${item.AirportCode}</span> ${item.Name},${item.CityName}</div>`;
-                    },
-                    onSelect: function (e, term, item) {
-                        //console.log(`Item "${item.getAttribute('data-langname')} (${item.getAttribute('data-lang')})" selected by ${e.type == 'keydown' ? 'pressing enter' : 'mouse click'}.`);
-                        document.getElementById(id + "-hidden").value = item.getAttribute('data-code');
-                        document.getElementById(id).value = item.getAttribute('data-langname') + ' (' + item.getAttribute('data-lang') + ')';
-                    }
-                });
-            }
-        });
-        $('.searchInput .input').focus(function () {
-            $('.searchInput').removeClass('focus');
-            $(this).parents('.searchInput').addClass('focus');
-        });
-        $('.searchInput').on('click', function () {
-            $(this).find('.input').focus();
-        });
-        mouseOutClose('.passengerArea');
-        function mouseOutClose(containerName) {
-            $(document).mouseup(function (e) {
-                var container = $(containerName);
-                if (!container.is(e.target) && container.has(e.target).length === 0) {
-                    container.hide();
-                }
-            });
-        }
-        $('footer .footerMenu > div p.title').on('click', function () {
-            $(this).next('ul').slideToggle();
-            $(this).toggleClass('active');
-        });
-        $('.showMobileMenu').on('click', function () {
-            $('body').addClass('activeMenu');
-        });
-        $('.closeMobileMenu').on('click', function () {
-            $('body').removeClass('activeMenu');
-        });
-    </script>
+    <script src="/assets/plugins/auto-complete.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js" integrity="sha512-uto9mlQzrs59VwILcLiRYeLKPPbS/bT71da/OEBYEwcdNUk8jYIy+D176RYoop1Da+f9mvkYrmj5MCLZWEtQuA==" crossorigin="anonymous"></script>
+    <script src="assets/js/default.js"></script>
 </body>
 </html>
