--- a/HtmlTemplate/_master.html
+++ b/HtmlTemplate/_master.html
@@ -22,10 +22,6 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker-standalone.min.css" rel="stylesheet" />
-    <link href="/assets/css/auto-complete.css" rel="stylesheet" />
-    <link href="/assets/css/jquery-ui.min.css" rel="stylesheet" />
-    <link href="/assets/css/default.css" rel="stylesheet" />
-    <link href="/assets/css/layout.css" rel="stylesheet" />
 </head>
 <body>
     <div id="ticketVue">
@@ -42,22 +38,22 @@
                         </div>
                         <div class="collapse navbar-collapse topMenu" id="navbarSupportedContent">
                             <form class="form-inline searchArea">
-                                <input class="form-control mr-sm-2" type="search" placeholder="Arama yapın..." aria-label="Search">
-                                <button class="btn my-2 my-sm-0"><i class="fa fa-search"></i>ARA</button>
+                                <input class="form-control mr-sm-2" type="search" placeholder="Search..." aria-label="Search">
+                                <button class="btn my-2 my-sm-0"><i class="fa fa-search"></i></button>
                             </form>
                             <ul class="navbar-nav mr-auto">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="#"><i class="fa fa-home"></i>ANASAYFA</a>
+                                    <a class="nav-link" href="/"><i class="fa fa-home"></i>HOME</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#"><i class="fa fa-users"></i>HAKKIMIZDA</a>
+                                    <a class="nav-link" href="#"><i class="fa fa-users"></i>ABOUT US</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#"><i class="fa fa-globe"></i>İLETİŞİM</a>
+                                    <a class="nav-link" href="/contact.html"><i class="fa fa-globe"></i>CONTACT</a>
                                 </li>
                             </ul>
                             <div class="callNow">
-                                <div class="text"><span>HEMEN ARA BİLET AL</span></div>
+                                <div class="text"><span>CALL US</span></div>
                                 <div class="number">
                                     <span class="icon icon-phone"></span>0850 123 45 67
                                 </div>
@@ -70,12 +66,12 @@
                 <div class="container">
                     <div class="bottomHeader">
                         <div class="nav nav-pills nav-fill menu2">
-                            <a href="#" class="nav-item nav-link">KAMPANYALI BİLETLER</a>
-                            <a href="#" class="nav-item nav-link">PEGASUS UÇAK BİLETİ</a>
-                            <a href="#" class="nav-item nav-link">THY UÇAK BİLETİ</a>
-                            <a href="#" class="nav-item nav-link">ATLASJET UÇAK BİLETİ</a>
-                            <a href="#" class="nav-item nav-link">ONURAIR UÇAK BİLETİ</a>
-                            <a href="#" class="nav-item nav-link">MAKALELER</a>
+                            <a href="#" class="nav-item nav-link">CAMPAIGN TICKETS</a>
+                            <a href="#" class="nav-item nav-link">PEGASUS FLIGHT TICKET</a>
+                            <a href="#" class="nav-item nav-link">THY FLIGHT TICKET</a>
+                            <a href="#" class="nav-item nav-link">ATLASJET FLIGHT TICKET</a>
+                            <a href="#" class="nav-item nav-link">ONURAIR FLIGHT TICKET</a>
+                            <a href="#" class="nav-item nav-link">ARTICLES</a>
                         </div>
                     </div>
                 </div>
@@ -84,17 +80,17 @@
         <div class="mobileMenuContainer">
             <div class="mobileMenu">
                 <div class="mobileMenuTitle">
-                    <img src="~/assets/images/menuIcon.png" class="closeMobileMenu" /> <span>Kullanıcı Menüsü</span>
+                    <img src="/assets/images/menuIcon.png" class="closeMobileMenu" /> <span></span>
                 </div>
                 <ul class="vertical">
-                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Anasayfa</a></li>
-                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Hakkımızda</a></li>
-                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Hava Yolları Bilet Değiştirme</a></li>
-                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Anadolu Jet İletişim</a></li>
-                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Sun Express İletişim</a></li>
-                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Türk Hava Yolları İletişim</a></li>
-                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Onur Air İletişim</a></li>
-                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Bize Ulaşın</a></li>
+                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Home</a></li>
+                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> About Us</a></li>
+                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Airline Ticket Change</a></li>
+                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Anadolu Jet</a></li>
+                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Sun Express</a></li>
+                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Turkish Airlines</a></li>
+                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Onur Air</a></li>
+                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Contact Us</a></li>
                 </ul>
             </div>
         </div>
@@ -106,15 +102,15 @@
                 <div class="row">
                     <div class="col-md-6">
                         <img class="pull-left giftIcon" src="/assets/images/gift.png" alt="" />
-                        <p class="text">
-                            <span>İNDİRİM VE PROMOSYONLARDAN</span><br />
-                            ANINDA HABERDAR OLMAK İSTER MİSİNİZ?
+                        <p class="text uppercase">
+                            <span>Would you like to be Informed</span><br />
+                            about DISCOUNTS and PROMOTIONS?
                         </p>
                     </div>
                     <div class="col-md-6">
                         <form class="searchBottomArea">
-                            <input type="text" name="Email" placeholder="E-Mail Adresiniz..." aria-label="Search" class="form-control">
-                            <button class="btn my-2 my-sm-0">ABONE OL</button>
+                            <input type="text" name="Email" placeholder="Email Address" aria-label="Search" class="form-control">
+                            <button class="btn my-2 my-sm-0">SUBSCRIBE</button>
                         </form>
                     </div>
                 </div>
@@ -124,10 +120,10 @@
             <div class="container">
                 <div class="footerMenu row">
                     <div class="col-md-3">
-                        <p class="title">Havayolu Firmaları</p>
+                        <p class="title">Airline Companies</p>
                         <ul class="vertical">
                             <li><a href="#">Pegasus</a></li>
-                            <li><a href="#">Türk Hava Yolları</a></li>
+                            <li><a href="#">Turkish Airlines</a></li>
                             <li><a href="#">Anadolujet</a></li>
                             <li><a href="#">Atlasjet</a></li>
                             <li><a href="#">Borajet</a></li>
@@ -135,18 +131,18 @@
                         <hr />
                     </div>
                     <div class="col-md-3">
-                        <p class="title">Firmamız Hakkında</p>
+                        <p class="title">About Our Company</p>
                         <ul class="vertical">
-                            <li><a href="#">Hakkımızda</a></li>
-                            <li><a href="#">Hizmetlerimiz</a></li>
-                            <li><a href="#">Satın Alma Hakkında</a></li>
-                            <li><a href="#">Kullanıcı Sözleşmesi</a></li>
-                            <li><a href="#">Bize Ulaşın</a></li>
+                            <li><a href="#">about Us</a></li>
+                            <li><a href="#">Our services</a></li>
+                            <li><a href="#">About Purchase</a></li>
+                            <li><a href="#">User Agreement</a></li>
+                            <li><a href="#">Contact us</a></li>
                         </ul>
                         <hr />
                     </div>
                     <div class="col-md-3">
-                        <p class="title">Popüler Şehirler</p>
+                        <p class="title">Popular Cities</p>
                         <ul class="vertical city">
                             <li><a href="#">İstanbul</a></li>
                             <li><a href="#">Antalya</a></li>
@@ -162,13 +158,13 @@
                         <hr />
                     </div>
                     <div class="col-md-3">
-                        <p class="title">Yardım &amp; Destek</p>
+                        <p class="title">Help & amp; Support</p>
                         <ul class="vertical">
-                            <li><a href="#">Kullanım Şartları</a></li>
-                            <li><a href="#">Gizlilik Sözleşmesi</a></li>
-                            <li><a href="#">Satış Sonrası Hizmetler</a></li>
-                            <li><a href="#">Hizmet Sözleşmesi</a></li>
-                            <li><a href="#">İptal &amp; İade Şartları</a></li>
+                            <li><a href="#">Terms of use</a></li>
+                            <li><a href="#">Confidentiality Agreement</a></li>
+                            <li><a href="#">After Sales Services</a></li>
+                            <li><a href="#">Service Agreement</a></li>
+                            <li><a href="#">Cancellation & amp; Refund Conditions</a></li>
                         </ul>
                         <hr />
                     </div>
@@ -183,7 +179,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <img class="pull-left" src="/assets/images/logo.png" alt="" />
-                            <span class="copyright">COPYRIGHT - 2017</span>
+                            <span class="copyright">COPYRIGHT - 2020</span>
                         </div>
                         <div class="col-md-6">
                             <div class="pull-right mar-l-30">
@@ -211,142 +207,10 @@
     <script src="/assets/js/jquery-3.0.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.23.0/moment.min.js"></script>
     <script src="/assets/js/vue.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/3.9.0/less.min.js"></script>
     <script src="/assets/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.15/jquery.bxslider.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
-    <script src="/assets/js/auto-complete.min.js"></script>
     <script src="/assets/js/jquery-ui.min.js"></script>
-    <script>
-        $('.flyType li').click(function () {
-            $('.flyType li').removeClass('active');
-            $(this).addClass('active');
-            var hasClass = $(this).hasClass('one');
-            if (hasClass) {
-                $('.dateTwo').hide();
-                $('.dateTwo + .w-100').hide();
-                $('.last-col').hide();
-            }
-            if (!hasClass) {
-                $('.dateTwo').show();
-                $('.dateTwo + .w-100').show();
-                $('.last-col').show();
-            }
-        });
-        $(document).ready(function () {
-            $('.countInputArea .minus').on('click', function () {
-                var inputVal = $(this).parent('.countInputArea').find('.countInput').val();
-                if (inputVal > 0)
-                    var inputValMinus = $(this).parent('.countInputArea').find('.countInput').val(+inputVal - 1);
-            });
-            $('.countInputArea .plus').on('click', function () {
-                var inputVal = $(this).parent('.countInputArea').find('.countInput').val();
-                var inputValMinus = $(this).parent('.countInputArea').find('.countInput').val(+inputVal + 1);
-
-            });
-
-            $('.passengerSelect').on('click', function () {
-                $('.passengerArea').show();
-            });
-
-            $(".fly-date").datepicker({
-                numberOfMonths: 2,
-            });
-
-            (function (factory) {
-                if (typeof define === "function" && define.amd) {
-
-                    // AMD. Register as an anonymous module.
-                    define(["../widgets/datepicker"], factory);
-                } else {
-
-                    // Browser globals
-                    factory(jQuery.datepicker);
-                }
-            }(function (datepicker) {
-
-                datepicker.regional.tr = {
-                    closeText: "kapat",
-                    prevText: '<i class="fa fa-long-arrow-left" aria-hidden="true"></i>',
-                    nextText: '<i class="fa fa-long-arrow-right" aria-hidden="true"></i>',
-                    currentText: "bugün",
-                    monthNames: ["Ocak", "Şubat", "Mart", "Nisan", "Mayıs", "Haziran",
-                        "Temmuz", "Ağustos", "Eylül", "Ekim", "Kasım", "Aralık"],
-                    monthNamesShort: ["Oca", "Şub", "Mar", "Nis", "May", "Haz",
-                        "Tem", "Ağu", "Eyl", "Eki", "Kas", "Ara"],
-                    dayNames: ["Pazar", "Pazartesi", "Salı", "Çarşamba", "Perşembe", "Cuma", "Cumartesi"],
-                    dayNamesShort: ["Paz", "Pzt", "Sal", "Çar", "Per", "Cum", "Cmt"],
-                    dayNamesMin: ["Paz", "Pzt", "Sal", "Çar", "Per", "Cum", "Cmt"],
-                    weekHeader: "Hf",
-                    dateFormat: "dd.mm.yy",
-                    firstDay: 1,
-                    isRTL: false,
-                    showMonthAfterYear: false,
-                    yearSuffix: ""
-                };
-                datepicker.setDefaults(datepicker.regional.tr);
-
-                return datepicker.regional.tr;
-
-            }));
-            autoComplateInput('first-place');
-            autoComplateInput('second-place');
-
-            function autoComplateInput(id) {
-                new window.autoComplete({
-                    selector: '#' + id,
-                    minChars: 2,
-                    source: function (term, suggest) {
-                        term = term.toLowerCase();
-                        //////////////////////////////////////////////////////////////////////////////////////////////
-                        //{"AirportCode":"SAW","Name":"Sabiha Gokcen","CityName":"Istanbul, Türkiye","isCity":false}//
-                        //////////////////////////////////////////////////////////////////////////////////////////////
-                        var choices = window.airportList;
-                        var suggestions = [];
-                        for (i = 0; i < choices.length; i++)
-                            if (~(choices[i].AirportCode + ' ' + choices[i].Name + ' ' + choices[i].CityName).toLowerCase().indexOf(term)) suggestions.push(choices[i]);
-                        suggest(suggestions);
-                    },
-                    renderItem: function (item, search) {
-                        search = search.replace(/[-\/\\^$*+?.()|[\]{}]/g, '\\$&amp;');
-                        var re = new RegExp("(" + search.split(' ').join('|') + ")", "gi");
-                        return `<div class="autocomplete-suggestion" data-code="${item.AirportCode},${item.isCity}" data-langname="${item.Name}" data-lang="${item.CityName}" data-val="${search}"><span class="shortName">${item.AirportCode}</span> ${item.Name},${item.CityName}</div>`;
-                    },
-                    onSelect: function (e, term, item) {
-                        //console.log(`Item "${item.getAttribute('data-langname')} (${item.getAttribute('data-lang')})" selected by ${e.type == 'keydown' ? 'pressing enter' : 'mouse click'}.`);
-                        document.getElementById(id + "-hidden").value = item.getAttribute('data-code');
-                        document.getElementById(id).value = item.getAttribute('data-langname') + ' (' + item.getAttribute('data-lang') + ')';
-                    }
-                });
-            }
-        });
-        $('.searchInput .input').focus(function () {
-            $('.searchInput').removeClass('focus');
-            $(this).parents('.searchInput').addClass('focus');
-        });
-        $('.searchInput').on('click', function () {
-            $(this).find('.input').focus();
-        });
-        mouseOutClose('.passengerArea');
-        function mouseOutClose(containerName) {
-            $(document).mouseup(function (e) {
-                var container = $(containerName);
-                if (!container.is(e.target) && container.has(e.target).length === 0) {
-                    container.hide();
-                }
-            });
-        }
-        $('footer .footerMenu > div p.title').on('click', function () {
-            $(this).next('ul').slideToggle();
-            $(this).toggleClass('active');
-        });
-        $('.showMobileMenu').on('click', function () {
-            $('body').addClass('activeMenu');
-        });
-        $('.closeMobileMenu').on('click', function () {
-            $('body').removeClass('activeMenu');
-        });
-    </script>
 </body>
 </html>
