--- a/HtmlTemplate/Buying.html
+++ b/HtmlTemplate/Buying.html
@@ -41,22 +41,22 @@
                         </div>
                         <div class="collapse navbar-collapse topMenu" id="navbarSupportedContent">
                             <form class="form-inline searchArea">
-                                <input class="form-control mr-sm-2" type="search" placeholder="Arama yapın..." aria-label="Search">
-                                <button class="btn my-2 my-sm-0"><i class="fa fa-search"></i>ARA</button>
+                                <input class="form-control mr-sm-2" type="search" placeholder="Search..." aria-label="Search">
+                                <button class="btn my-2 my-sm-0"><i class="fa fa-search"></i></button>
                             </form>
                             <ul class="navbar-nav mr-auto">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="#"><i class="fa fa-home"></i>ANASAYFA</a>
+                                    <a class="nav-link" href="/"><i class="fa fa-home"></i>HOME</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#"><i class="fa fa-users"></i>HAKKIMIZDA</a>
+                                    <a class="nav-link" href="#"><i class="fa fa-users"></i>ABOUT US</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#"><i class="fa fa-globe"></i>İLETİŞİM</a>
+                                    <a class="nav-link" href="/contact.html"><i class="fa fa-globe"></i>CONTACT</a>
                                 </li>
                             </ul>
                             <div class="callNow">
-                                <div class="text"><span>HEMEN ARA BİLET AL</span></div>
+                                <div class="text"><span>CALL US</span></div>
                                 <div class="number">
                                     <span class="icon icon-phone"></span>0850 123 45 67
                                 </div>
@@ -69,12 +69,12 @@
                 <div class="container">
                     <div class="bottomHeader">
                         <div class="nav nav-pills nav-fill menu2">
-                            <a href="#" class="nav-item nav-link">KAMPANYALI BİLETLER</a>
-                            <a href="#" class="nav-item nav-link">PEGASUS UÇAK BİLETİ</a>
-                            <a href="#" class="nav-item nav-link">THY UÇAK BİLETİ</a>
-                            <a href="#" class="nav-item nav-link">ATLASJET UÇAK BİLETİ</a>
-                            <a href="#" class="nav-item nav-link">ONURAIR UÇAK BİLETİ</a>
-                            <a href="#" class="nav-item nav-link">MAKALELER</a>
+                            <a href="#" class="nav-item nav-link">CAMPAIGN TICKETS</a>
+                            <a href="#" class="nav-item nav-link">PEGASUS FLIGHT TICKET</a>
+                            <a href="#" class="nav-item nav-link">THY FLIGHT TICKET</a>
+                            <a href="#" class="nav-item nav-link">ATLASJET FLIGHT TICKET</a>
+                            <a href="#" class="nav-item nav-link">ONURAIR FLIGHT TICKET</a>
+                            <a href="#" class="nav-item nav-link">ARTICLES</a>
                         </div>
                     </div>
                 </div>
@@ -83,37 +83,37 @@
         <div class="mobileMenuContainer">
             <div class="mobileMenu">
                 <div class="mobileMenuTitle">
-                    <img src="/assets/images/menuIcon.png" class="closeMobileMenu" /> <span>Kullanıcı Menüsü</span>
+                    <img src="/assets/images/menuIcon.png" class="closeMobileMenu" /> <span></span>
                 </div>
                 <ul class="vertical">
-                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Anasayfa</a></li>
-                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Hakkımızda</a></li>
-                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Hava Yolları Bilet Değiştirme</a></li>
-                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Anadolu Jet İletişim</a></li>
-                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Sun Express İletişim</a></li>
-                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Türk Hava Yolları İletişim</a></li>
-                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Onur Air İletişim</a></li>
-                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Bize Ulaşın</a></li>
+                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Home</a></li>
+                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> About Us</a></li>
+                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Airline Ticket Change</a></li>
+                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Anadolu Jet</a></li>
+                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Sun Express</a></li>
+                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Turkish Airlines</a></li>
+                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Onur Air</a></li>
+                    <li><a href="#"><i class="fa fa-long-arrow-right" aria-hidden="true"></i> Contact Us</a></li>
                 </ul>
             </div>
         </div>
 
-
+        <!-- BODY -->
 
         <section class="subscribe">
             <div class="container clearfix">
                 <div class="row">
                     <div class="col-md-6">
                         <img class="pull-left giftIcon" src="/assets/images/gift.png" alt="" />
-                        <p class="text">
-                            <span>İNDİRİM VE PROMOSYONLARDAN</span><br />
-                            ANINDA HABERDAR OLMAK İSTER MİSİNİZ?
+                        <p class="text uppercase">
+                            <span>Would you like to be Informed</span><br />
+                            about DISCOUNTS and PROMOTIONS?
                         </p>
                     </div>
                     <div class="col-md-6">
                         <form class="searchBottomArea">
-                            <input type="text" name="Email" placeholder="E-Mail Adresiniz..." aria-label="Search" class="form-control">
-                            <button class="btn my-2 my-sm-0">ABONE OL</button>
+                            <input type="text" name="Email" placeholder="Email Address" aria-label="Search" class="form-control">
+                            <button class="btn my-2 my-sm-0">SUBSCRIBE</button>
                         </form>
                     </div>
                 </div>
@@ -123,10 +123,10 @@
             <div class="container">
                 <div class="footerMenu row">
                     <div class="col-md-3">
-                        <p class="title">Havayolu Firmaları</p>
+                        <p class="title">Airline Companies</p>
                         <ul class="vertical">
                             <li><a href="#">Pegasus</a></li>
-                            <li><a href="#">Türk Hava Yolları</a></li>
+                            <li><a href="#">Turkish Airlines</a></li>
                             <li><a href="#">Anadolujet</a></li>
                             <li><a href="#">Atlasjet</a></li>
                             <li><a href="#">Borajet</a></li>
@@ -134,18 +134,18 @@
                         <hr />
                     </div>
                     <div class="col-md-3">
-                        <p class="title">Firmamız Hakkında</p>
+                        <p class="title">About Our Company</p>
                         <ul class="vertical">
-                            <li><a href="#">Hakkımızda</a></li>
-                            <li><a href="#">Hizmetlerimiz</a></li>
-                            <li><a href="#">Satın Alma Hakkında</a></li>
-                            <li><a href="#">Kullanıcı Sözleşmesi</a></li>
-                            <li><a href="#">Bize Ulaşın</a></li>
+                            <li><a href="#">about Us</a></li>
+                            <li><a href="#">Our services</a></li>
+                            <li><a href="#">About Purchase</a></li>
+                            <li><a href="#">User Agreement</a></li>
+                            <li><a href="#">Contact us</a></li>
                         </ul>
                         <hr />
                     </div>
                     <div class="col-md-3">
-                        <p class="title">Popüler Şehirler</p>
+                        <p class="title">Popular Cities</p>
                         <ul class="vertical city">
                             <li><a href="#">İstanbul</a></li>
                             <li><a href="#">Antalya</a></li>
@@ -161,13 +161,13 @@
                         <hr />
                     </div>
                     <div class="col-md-3">
-                        <p class="title">Yardım &amp; Destek</p>
+                        <p class="title">Help & amp; Support</p>
                         <ul class="vertical">
-                            <li><a href="#">Kullanım Şartları</a></li>
-                            <li><a href="#">Gizlilik Sözleşmesi</a></li>
-                            <li><a href="#">Satış Sonrası Hizmetler</a></li>
-                            <li><a href="#">Hizmet Sözleşmesi</a></li>
-                            <li><a href="#">İptal &amp; İade Şartları</a></li>
+                            <li><a href="#">Terms of use</a></li>
+                            <li><a href="#">Confidentiality Agreement</a></li>
+                            <li><a href="#">After Sales Services</a></li>
+                            <li><a href="#">Service Agreement</a></li>
+                            <li><a href="#">Cancellation & amp; Refund Conditions</a></li>
                         </ul>
                         <hr />
                     </div>
