--- a/HtmlTemplate/index.html
+++ b/HtmlTemplate/index.html
@@ -46,13 +46,13 @@
                             </form>
                             <ul class="navbar-nav mr-auto">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="#"><i class="fa fa-home"></i>HOME</a>
+                                    <a class="nav-link" href="/"><i class="fa fa-home"></i>HOME</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#"><i class="fa fa-users"></i>ABOUT US</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#"><i class="fa fa-globe"></i>CONTACT</a>
+                                    <a class="nav-link" href="/contact.html"><i class="fa fa-globe"></i>CONTACT</a>
                                 </li>
                             </ul>
                             <div class="callNow">
@@ -209,7 +209,7 @@
                         <div class="col last-col"></div>
                     </div>
                     <div class="searchBtnCon">
-                        <a href="/SearchResult.html" class="btn btn-block searchBtn">FIND THE CHEAPEST FLIGHT TICKETS</a>
+                        <a href="/loading.html?redirect=/SearchResult.html" class="btn btn-block searchBtn">FIND THE CHEAPEST FLIGHT TICKETS</a>
                     </div>
                     <div class="ticketBgbottom"></div>
                 </div>
@@ -560,15 +560,15 @@
                 <div class="row">
                     <div class="col-md-6">
                         <img class="pull-left giftIcon" src="/assets/images/gift.png" alt="" />
-                        <p class="text">
-                            <span>İNDİRİM VE PROMOSYONLARDAN</span><br />
-                            ANINDA HABERDAR OLMAK İSTER MİSİNİZ?
+                        <p class="text uppercase">
+                            <span>Would you like to be Informed</span><br />
+                            about DISCOUNTS and PROMOTIONS?
                         </p>
                     </div>
                     <div class="col-md-6">
                         <form class="searchBottomArea">
-                            <input type="text" name="Email" placeholder="E-Mail Adresiniz..." aria-label="Search" class="form-control">
-                            <button class="btn my-2 my-sm-0">ABONE OL</button>
+                            <input type="text" name="Email" placeholder="Email Address" aria-label="Search" class="form-control">
+                            <button class="btn my-2 my-sm-0">SUBSCRIBE</button>
                         </form>
                     </div>
                 </div>
@@ -578,10 +578,10 @@
             <div class="container">
                 <div class="footerMenu row">
                     <div class="col-md-3">
-                        <p class="title">Havayolu Firmaları</p>
+                        <p class="title">Airline Companies</p>
                         <ul class="vertical">
                             <li><a href="#">Pegasus</a></li>
-                            <li><a href="#">Türk Hava Yolları</a></li>
+                            <li><a href="#">Turkish Airlines</a></li>
                             <li><a href="#">Anadolujet</a></li>
                             <li><a href="#">Atlasjet</a></li>
                             <li><a href="#">Borajet</a></li>
@@ -589,18 +589,18 @@
                         <hr />
                     </div>
                     <div class="col-md-3">
-                        <p class="title">Firmamız Hakkında</p>
+                        <p class="title">About Our Company</p>
                         <ul class="vertical">
-                            <li><a href="#">Hakkımızda</a></li>
-                            <li><a href="#">Hizmetlerimiz</a></li>
-                            <li><a href="#">Satın Alma Hakkında</a></li>
-                            <li><a href="#">Kullanıcı Sözleşmesi</a></li>
-                            <li><a href="#">Bize Ulaşın</a></li>
+                            <li><a href="#">about Us</a></li>
+                            <li><a href="#">Our services</a></li>
+                            <li><a href="#">About Purchase</a></li>
+                            <li><a href="#">User Agreement</a></li>
+                            <li><a href="#">Contact us</a></li>
                         </ul>
                         <hr />
                     </div>
                     <div class="col-md-3">
-                        <p class="title">Popüler Şehirler</p>
+                        <p class="title">Popular Cities</p>
                         <ul class="vertical city">
                             <li><a href="#">İstanbul</a></li>
                             <li><a href="#">Antalya</a></li>
@@ -616,13 +616,13 @@
                         <hr />
                     </div>
                     <div class="col-md-3">
-                        <p class="title">Yardım &amp; Destek</p>
+                        <p class="title">Help & amp; Support</p>
                         <ul class="vertical">
-                            <li><a href="#">Kullanım Şartları</a></li>
-                            <li><a href="#">Gizlilik Sözleşmesi</a></li>
-                            <li><a href="#">Satış Sonrası Hizmetler</a></li>
-                            <li><a href="#">Hizmet Sözleşmesi</a></li>
-                            <li><a href="#">İptal &amp; İade Şartları</a></li>
+                            <li><a href="#">Terms of use</a></li>
+                            <li><a href="#">Confidentiality Agreement</a></li>
+                            <li><a href="#">After Sales Services</a></li>
+                            <li><a href="#">Service Agreement</a></li>
+                            <li><a href="#">Cancellation & amp; Refund Conditions</a></li>
                         </ul>
                         <hr />
                     </div>
